Holy grail layout

--- a/HOLY-grail-layout/index.html
+++ b/HOLY-grail-layout/index.html
@@ -7,6 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="grid-container">
+        <header>
+            <h1>Fogg Wall</h1>
+        </header>
+        <nav>
+            <p>Categories</p>
+            <li>Film & Cinema</li>
+            <li>Books & Readings</li>
+            <li>Games & consoles</li>
+            <li>Food & Drink</li>
+            <li>World News</li>
+            <li>Outdoor Living</li>
+        </nav>
+        <article>
+            <h2>The Best 5 open World games</h2>
+            <img src="./img/banner.png" alt="article banner">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis corporis ducimus labore nihil iure mollitia, qui reiciendis cupiditate ex, sunt accusamus veritatis? Deleniti rem nisi corporis maxime nam officia incidunt itaque culpa quisquam veniam, numquam eligendi nobis, libero quidem. Assumenda soluta perferendis exercitationem quae odio eum at, accusantium iure hic vel dolorem illum ipsa. Et, tempora fugiat nam facere voluptate saepe consequatur, odio, quidem minus vero unde! Praesentium, sint nisi. Numquam, error! Cumque delectus corporis rem tempora ex laboriosam nulla facilis. Ea, sed. Maiores, vitae, aliquam temporibus perspiciatis voluptatibus, consequatur optio laborum in sint voluptatum omnis quis delectus quaerat id?</p>
+        </article>
+        <aside>
+            <ul>
+                <li>
+                    <p><strong>Published on</strong></p>
+                    <p>May 6th 2022</p>
+                </li>
+                <li>
+                    <p><strong>In the category</strong></p>
+                    <p>Games and Consoles</p>
+                </li>
+                <li>
+                    <p><strong>Written By</strong></p>
+                    <p>Mario</p>
+                </li>
+            </ul>
+        </aside>
+        <footer>
+            <p>Copyright 2022 The fog wall</p>
+        </footer>
+    </div>
 </body>
 </html>
